--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </FrameLayout>
+
+
+        <ImageButton
+            android:id="@+id/add_new_post_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_above="@+id/main_container"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="333dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="-50dp"
+            android:background="@color/design_default_color_primary_dark"
+            android:scaleType="centerCrop"
+            android:src="@drawable/add_post_high"
+            android:baselineAlignBottom="false"
+            android:focusableInTouchMode="false"/>
+
     </RelativeLayout>
 
 
