change to using firestore. previous code that uses realtime database is commented out

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,12 @@
                 android:id="@+id/all_users_post_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+            <ImageView
+                android:id="@+id/main_post"
+                android:layout_width="313dp"
+                android:layout_height="190dp"
+                app:srcCompat="@drawable/add_post_high" />
         </FrameLayout>
 
 
