completed profile page integrated with the database and modified setup page

--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -7,6 +7,24 @@
     android:background="@drawable/background1"
     tools:context=".SetupActivity">
 
+    <EditText
+        android:id="@+id/setup_Bio"
+        android:layout_width="wrap_content"
+        android:layout_height="69dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="37dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="244dp"
+        android:background="@drawable/inputs"
+        android:drawableLeft="@drawable/name"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Bio"
+        android:inputType="textMultiLine"
+        android:padding="14dp" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/setup_profile_image"
         android:layout_width="200dp"
@@ -30,9 +48,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="145dp"
-        android:layout_marginTop="512dp"
+        android:layout_marginTop="595dp"
         android:layout_marginEnd="146dp"
-        android:layout_marginBottom="146dp"
+        android:layout_marginBottom="61dp"
         android:background="@drawable/button"
         android:padding="14dp"
         android:text="Save"
@@ -41,8 +59,8 @@
 
     <EditText
         android:id="@+id/setup_user_name"
-        android:layout_width="351dp"
-        android:layout_height="74dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -68,7 +86,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="37dp"
         android:layout_marginEnd="22dp"
-        android:layout_marginBottom="318dp"
+        android:layout_marginBottom="330dp"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/name"
         android:ems="10"
@@ -85,10 +103,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="419dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="242dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="496dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="166dp"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/country"
         android:ems="10"
