added drawables for messaging page

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -31,6 +31,7 @@
             android:id="@+id/send_image_file_button"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
+            android:src="@drawable/ic_select_image"
           />
 
         <EditText
@@ -44,6 +45,7 @@
             android:id="@+id/send_message_button"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
+            android:src="@drawable/ic_send_message"
             />
 
     </LinearLayout>
