--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ChatActivity">
 
     <include
         android:id="@+id/chat_bar_layout"
         layout ="@layout/app_bar_layout">
     </include>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/match1"
+        android:layout_width="62dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:src="@drawable/profile"
+        app:civ_border_color="@color/design_default_color_primary_dark"
+        app:civ_border_width="2dp" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/match2"
+        android:layout_width="62dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="264dp"
+        android:src="@drawable/profile"
+        app:civ_border_color="@color/design_default_color_primary_dark"
+        app:civ_border_width="2dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messages_list_users"
