--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,9 +17,10 @@
         android:layout_width="62dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="13dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="18dp"
         android:src="@drawable/profile"
         app:civ_border_color="@color/design_default_color_primary_dark"
         app:civ_border_width="2dp" />
@@ -28,10 +29,11 @@
         android:id="@+id/match2"
         android:layout_width="62dp"
         android:layout_height="40dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="264dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="267dp"
         android:src="@drawable/profile"
         app:civ_border_color="@color/design_default_color_primary_dark"
         app:civ_border_width="2dp" />
@@ -77,5 +79,12 @@
             />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Matches"
+        android:textColor="#FFFFFF" />
 
 </RelativeLayout>
