--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <ImageView
+                android:id="@+id/post_view"
+                android:layout_width="match_parent"
+                android:layout_height="244dp"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/add_post_high" />
+
+            <TextView
+                android:id="@+id/post_text"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="165dp"
+                android:layout_marginTop="260dp" />
+
         </FrameLayout>
+
 
 
         <ImageButton
